tests/NormalTests/paczka1/fuzzy1/30707932.err
Error in line 6: IEusY S466 7,4
Error in line 9: lWzS1 S466 29,5
Error in line 5: A438 A187 86,1
Error in line 21: lWzS1 A438 150,0
Error in line 36: A438 A206 44,6
Error in line 38: A438 A438 43,7
